public/css/main.css
/* ... */
.modelPic{
	height:100%;
}

/*heart icons*/
.userPreference div span{
    margin-top:6px
}

.userPreference{
	width:160px;
	height:50px;
	bottom:50px;
	right:-50px;
	z-index:110;
}

.userPreference > div{
	background-color:rgb(34,34,34);
	width:50px;
	height:50px;
	border-radius:30px;
	float:left;
	margin-left:0.5em;
	position: relative;	
	display:block;
	border:none;
	box-shadow: none;
}

/*category hidden box*/

.hiddenBox{
	width:230px;
	top:30px;
	left:0px;
	display:none;
}

#collage .hiddenBox{
	left:90px;
}

.button_category > .hiddenBox{
	width:109px;
	top:30px;
	right:55px;
}

.button_category > .hiddenBox > ul > li{
	color:rgb(255,255,255);
	padding:13px;
	display:block;
	cursor: pointer;
}

.hiddenBox-submenu{
	top:0;
	right:-128px;
	height:300px;
	width:140px;
}
	
.hiddenBox-submenu > ul{
	width:125px;
	height:96%;
	background-color: rgb(100,100,100);
	position: absolute;
	top:7px;
	right:7px;
	overflow-y:auto;
}

.hiddenBox-submenu > ul > li{
	padding:6px 0px 6px 6px;
	color:rgb(255,255,255);
	cursor: pointer;
}

.styleOutfit,
.occassionOutfit,
.seasonOutfit,
.weahterOutfit{
	display:none;
/*hides all the sub categories in the beginning*/
}

/*layer hidden box*/
.button_layer > .hiddenBox > ul{
	overflow-y:auto;
	overflow-x:hidden;
	height:42em;
	background-color: rgb(34,34,34);
}

.dragAndDropGuide{
	background: url("../images/dragAndDrop.png") top left no-repeat;
	background-size: 100%;
	display:none;
	position: absolute;
	z-index: -1;
	right: 140px;
	top: 50px;
	width: 100px;
	height: 150px;
	opacity:0.8;
}

#collage .dragAndDropGuide{
	right: 210px;
}


.layers{
	width:100%;
	height:120px;
	position: relative;
	opacity:0.9;
	border-bottom:1px solid rgb(200,200,200);
	border-top:1px solid rgb(200,200,200);
	cursor:move;
}

.layers div,
.holdIcon,
.imageIconBox > a > img,
.itemDescriptionBox > div{
	position: absolute;
}

.layers > div{
	height:100%;
}

.holdIconBox{
	width:20px;
	top:0;
	left:0;
}

.layers .removeIcon{
	position:absolute;
	left:10px;
	top:10px;
	color:rgb(100,100,100);	
	font-size: 1.1em;
	cursor: pointer;
}

.layers .removeIcon:hover{
	color:rgb(170,220,200);
}

.holdIcon{
	top:50px;
	left:7px;
	cursor: move;
	color:rgb(197,197,197);
	font-size:1.5em;
}

.imageIconBox > a > img{
	height:80%;
	right:0;
	left:0;
	top:0;
	bottom:0;
	margin:auto;
	z-index:990;
}

.imageIconBox{
	background-color: rgb(255,255,255);
	width: 43%;
	height: 81% !important;
	border-radius: 150px;
	left: 24px;
	margin: 12px 5px;
	overflow: hidden;
	z-index: 100;	
}

.itemDescriptionBox{
	width:92px;
	top:0;
	right:0;
}

.titleOfProduct{
	top:15px;
	left:0px;
	font-size:1.2em;
}

.titleOfProduct > a{
	color:rgb(255,255,255);
}

.tryonPage .url{
	font-family:Tahoma, Geneva, sans-serif;
	top:40px;
	left:0px;
	font-size:0.8em;
}

.tryonPage .url > a{
	color:rgb(191,255,255);
}

.tryonPage .price{
	top:80px;
	left:0px;
	font-size:1.2em;
	color:rgb(235,235,235);
}

.itemDescriptionBox > .itemHeart> .heart_empty,
.itemDescriptionBox > .itemHeart> .heart_filled{
	width:35px;
	height:35px;
	top:65px;
	left:32px;
	cursor: pointer;
}


/*--Effect--*/

.submitPanel > ul > li:hover,
.controlPanel > ul > li:hover,
.button_category > .hiddenBox > ul > li:hover,
.hiddenBox-submenu > ul > li:hover,
.titleOfProduct > a:hover,
.tryonPage .url > a:hover{
	color:rgb(50,180,240);
}


.userPreference > div:hover,
.userPreference > div:active{
	background-color:rgb(34,34,34);
}

.button_category .hiddenBox ul li:hover .hiddenBox-submenu ul li{
	display:block;
}

.layers:hover{
	opacity:1;
}

/*---------collage and tryon tool box (right side of the page)--------Log-End 10/18/2013*/
/*--Structure--*/
#creationToolbox{
	position: relative;
	float:left;
	height:100%;
	width:49%;
	min-height: 400px;
	background-color:rgb(255,255,255);
	border:1px solid rgb(150,150,150);
	margin-left:0.6em;
	overflow:hidden;
}

/*header*/
#itembox_header{
	height:25px;
	border-bottom:1px solid rgb(186,186,186);
	background-color:rgb(240,240,240);
}

.itemList_myItems,.itemList_model{
	width:20%;
}

.itemList_clothing{
	width:31%;
}


#itembox_header .itemList_Embelishment{
	width:31%;
	height:14px;
	border-right:none;
	position: absolute;
	right:0;
	top:0;
}

/*collage header*/
.tryon-collage > #creationToolbox > #itembox_header > ul > li{
	width:25%;
}

/*--Element--*/
#itembox_header ul li{
	float:left;
	color:rgb(135,135,135);
	border-right:1px solid rgb(186,186,186);
	text-align: center;
	cursor: pointer;
	height: 100%;
	padding-top:5px;
	padding-bottom:7px;
}

#itembox_header ul .currently_focus{
	background-color:rgb(255,255,255);
	color:rgb(80,80,80);
	padding-bottom:8px;
	margin-left:-1px;
	border-left:1px solid rgb(156,156,156);
}

/*subheader*/
.itembox_subHeader{
	height:10%;
	border-bottom:1px solid rgb(187,187,187);
	position: absolute;
	left:0;
	z-index:102;
}

.subHeader-list{
	width:11em;
	height:1.49em;
	border:1px solid rgb(200,200,200);
	padding:4px 0px 0px 4px;
	font-size:13px;
	text-align:left;
}

.subHeader-list span{
	cursor: pointer;
}

#modelList .pose .subHeader-list,
#modelList .shape .subHeader-list{
	width:8em;
}

.subHeader-list.filterOrder{
	width:5em;
}	

.subHeader-list.order{
	width:8em;
}

.subHeader-list.model{
	width:11em;
}

.controlBoxes{
	position: absolute;
	bottom:20%;
}

#clothingItemList,
#modelList,
#backgroundList,
#embelishmentList,
#beautyList,
#peopleList,
#embelishmentList{
	display:none;
}

.controlBoxes > li{
	float:left;
	margin:0 0.5%;
	color:rgb(140,140,140);
	position: relative;
	cursor: pointer;
}

.itembox_subHeader > div > ul > .firstChild{
	margin-left:2.5%;
}

.itembox_subHeader > div > ul > li> form > input{
	color:rgb(140,140,140);
	width:11.4em;
	padding-left:5px;
	height:23px;
	border:1px solid rgb(200,200,200);
	font-family:"Calisto MT";
	font-size:13px;
}

.iconWrapper{
	background-color:rgb(250,250,250);
	width:24px;
	height:23px;
	position: absolute;
	top:1px;
	bottom:1px;
	right:1px;
	border-left:1px solid rgb(200,200,200);
}
/* ... */

